<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="property_path">Path: </string>
    <string name="property_date">Date: </string>
    <string name="property_size">Size: </string>
    <string name="property_location">Location: </string>
    <string name="property_address">Address: </string>
    <string name="appName">TrackManager</string>
    <string name="CFG_WIPE_SENSITIVITY">100</string>
    <string name="CFG_DATE_FORMAT">dd.MM.yyyy</string>
    <string name="CFG_TRACK_FOTO_TOLERANCE_MINUTES">45</string>
    <string name="menu_find_date">Find date</string>
    <string name="menu_receive_tracks">Receive Tracks</string>
    <string name="search_tracks">Search Tracks</string>
    <string name="menu_insert_track_path">Add Track Path</string>
    <string name="menu_insert_photo_path">Add Photo Path</string>
    <string name="menu_add_property">Add Property</string>
    <string name="menu_delete">Delete</string>
    <string name="comment_label">Comment:</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_load_new_tracks">Load new tracks</string>
    <string name="menu_reload_tracks">Reload all tracks</string>
    <string name="menu_show_multi_activity_days">Show multi-activity days</string>
    <string name="menu_rescan_phtots">Rescan photos</string>
    <string name="menu_recreate_statistics">Re-create statistics</string>
    <string name="menu_edit_track">Edit track</string>
    <string name="menu_copy_track">Copy track</string>
    <string name="menu_merge_select">Toggle merge selection</string>
    <string name="menu_merge_tracks">Merge tracks</string>
    <string name="menu_preferencies">Preferencies</string>
    <string name="menu_add_track_folder">Add Track folder</string>
    <string name="menu_clear_track_folders">Clear Track folder configuration</string>
    <string name="menu_photo_folder">Photo folder</string>
    <string name="menu_export_db">Export DB</string>
    <string name="menu_import_db">Import DB</string>
    <string name="menu_goto_date">Go to Date</string>
    <string name="menu_delete_track">Delete track</string>
    <string name="menu_share_track_bt">Share Track via Bluetooth</string>
    <string name="menu_save_search">Save search</string>
    <string name="are_you_sure_exit">Are you sure?</string>
    <string name="are_you_sure_delete">Are you sure?</string>
    <string name="merge_select_only_two_tracks">Only two tracks can get merged at one time!</string>
    <string name="merge_tracks_overlapping">Can not merge: The End-Time of Track 1 is after the Start-Time of Track 2!</string>
    <string name="this_wil_delete_all">This will delete all modifications and activity-mappings of all tracks!</string>
    <string name="delete_track">Delete Track</string>
    <string name="exit_application">Exit TrackManager</string>
    <string name="delete_point">Delete Point</string>
    <string name="menu_day">Day</string>
    <string name="menu_week">Week</string>
    <string name="menu_month">Month</string>
    <string name="menu_year">Year</string>
    <string name="menu_show_ht_profile">Show height - time profile</string>
    <string name="menu_show_hd_profile">Show height - distance profile</string>
    <string name="menu_google_maps">Show in Google Maps</string>
    <string name="headline_tracks">Tracks</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="track_name_label">Track name:</string>
    <string name="new_track_name_label">Start new track:</string>
    <string name="existing_track_name_label">OR Resume track:</string>
    <string name="name_label">Name:</string>
    <string name="activity_label">Activity:</string>
    <string name="date_from_label">Date from:</string>
    <string name="select_date_label">Select Date:</string>
    <string name="date_to_label">Date to:</string>
    <string name="start_date_label">Start date:</string>
    <string name="start_time_label">Start time:</string>
    <string name="activity_select">Select Activity:</string>
    <string name="activity_biking">Biking</string>
    <string name="activity_climbing">Climbing</string>
    <string name="activity_hiking">Hiking</string>
    <string name="activity_mountainbiking">Mountainbiking</string>
    <string name="activity_bike_and_hike">Bike &amp; hike</string>
    <string name="activity_running">Running</string>
    <string name="activity_skiing">Skiing</string>
    <string name="activity_figln">Figln</string>
    <string name="activity_skitour">Ski Tour</string>
    <string name="activity_sledging">Sledging</string>
    <string name="height">Height</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="track_profile">Track profile</string>
    <string name="select_activity_first">Please select an activity before copying a track!</string>
    <string name="show_on_map">Show on map</string>
    <string name="show_photos">Show photos</string>
    <string name="no_tracks_found">No tracks found</string>
    <string name="dateSliderTitle">Selected date</string>
    <string name="loader_loading_tracks">Loading tracks</string>
    <string name="select_to_resume">-- select to resume --</string>
    <string name="loader_loading_photos">Loading photos</string>
    <string name="activate_gps">GPS disabled! Please activate GPS inside the system settings.</string>
    <string name="start_track">Start track</string>
    <string name="track_name_exists">A recorded track with that name already exists!</string>
    <string name="property_name_label">Property name:</string>
    <string name="property_value_label">Property value:</string>
    <string name="label_start">Start:</string>
    <string name="label_end">End:</string>
    <string name="label_distance">Distance:</string>
    <string name="label_height">Height:</string>
    <string name="label_avg_pulse">Avg. pulse:</string>
    <string name="label_max_pulse">Max. pulse:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_ascent">Ascent:</string>
    <string name="label_select_device">Select device:</string>
    <string name="label_receiving_tracks">Receiving tracks...</string>
    <string name="label_received">received</string>
    <string name="label_track">track</string>
    <string name="label_tracks">tracks</string>
    <string name="label_done">Done.</string>
    <string name="edit_property_label">Edit property:</string>
    <string name="property_descr_photo_path">Path where the program looks for photos to link them with tracks. Multiple entries allowed.</string>
    <string name="property_descr_track_path">Path where the program looks for tracks. Multiple entries allowed.</string>
    <string name="enter_alias_name">Enter alias name to save</string>
    <string name="bluetooth_not_avaliable">Bluetooth not available on this device!</string>
    <string name="bluetooth_not_allowed">You must allow Bluetooth to use this feature!</string>
    <string name="label_send_track">Send track</string>
    <string name="label_sending_track">Sending track...</string>
    <string name="label_discover_devices">Search for more...</string>
    <string name="label_sending_timeout">Can not send track: Timeout ocured!</string>
    <string name="label_pulse_0">Very Light</string>
    <string name="label_pulse_1_2">Light (fat burning)</string>
    <string name="label_pulse_3_4">Moderate (aerobic)</string>
    <string name="label_pulse_5_6">Hard (anaerobic)</string>
    <string name="label_pulse_7_8">Maximum</string>
    <string name="label_pulse_zones">Pulse Zones</string>
    <string name="toast_export_finished">Export finished</string>
    <string name="toast_import_finished">Import finished</string>


    <string-array name="do_not_ask_again">
        <item>Do not ask again</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>